# VLA

./: .gitignore  README.md  api.py  plants.csv  pyproject.toml  requirements.txt  test.py
PlantGridViz/client/: index.ts
PlantGridViz/server/: index.ts  layout.ts
PlantGridViz/server/utils/: serialize.ts
PlantGridViz/shared/: schema.ts
plant_layout/: __init__.py  data.py  grid.py  layout.py  main.py  service.py  shadow.py  sunlight.py  visualize.py
scripts/: build_binary.sh
server/: routes.ts
