[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "vla"
version = "0.1.0"
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "shapely"
]

[project.scripts]
vla = "plant_layout.main:main"

[tool.setuptools.packages.find]
include = ["plant_layout"]
